# frobomind

./: .gitignore  .gitmodules  .project  README.md  frobomind_make
fmApp/frobolab/frobit_v1_demo/: fmMake.txt  package.xml
fmApp/frobolab/frobit_v1_demo/launch/: .sim_remote_keyboard.launch.swp  remote_keyboard.launch  remote_keyboard_bt.launch  sim_remote_keyboard.launch
fmApp/sdu/kjeld_sandbox/frobit_plot/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_grassbots_2014/: CMakeLists.txt  fmMake.txt  package.xml  setup.py
fmApp/sdu/sdu_grassbots_2014/launch/: grassbots_plot_feedback.launch  grassbots_plot_track.launch  grassbots_run.launch  grassbots_sim.launch  replay_jan2014.launch  test_route_plan_socketd.launch  test_route_socketd.launch
fmApp/sdu/sdu_grassbots_2014/mission/: keyboard_mission_node.py  wiimote_mission_node.py
fmApp/sdu/sdu_grassbots_2014/monitor/: lighthouse_node.py
fmApp/sdu/sdu_grassbots_2014/navigation/: navigation_globals.py  pid_controller.py  readme.txt  route_plan.py  route_plan_client.py  route_plan_server_node.py  route_plan_socketd_node.py  waypoint_list.py  waypoint_navigation.py  waypoint_navigation_node.py
fmApp/sdu/sdu_grassbots_2014/sim/: frobit.world
fmApp/sdu/sdu_grassbots_2014/utils/: route_plan.py
fmApp/sdu/sdu_grassbots_2014/waypoints/: show_route_plan.py  simdir_route_planner.py  waypoints.txt  waypoints_rel_coverage.txt
fmControllers/implement/sdu_painter/: CMakeLists.txt  package.xml  readme.txt  setup.py
fmControllers/implement/sdu_painter/firmware/: avr_serial.c  avr_serial.h  fmctrl_def.h  main.c  painter.hex  painter_fw.c  painter_fw.h  rcnmea.c  rcnmea.h  readme.txt
fmControllers/implement/sdu_painter/launch/: example.launch
fmControllers/implement/sdu_painter/src/: painter_node.py
fmControllers/implement/sdu_vibro_crop/: CMakeLists.txt  package.xml
fmControllers/implement/sdu_vibro_crop/action/: move_tool_simple.action
fmControllers/implement/sdu_vibro_crop/src/: kongskilde_rowcleaner_node.cpp  kongskilderowcleaner.cpp  kongskilderowcleaner.h
fmControllers/platform/dtu_smr/: CMakeLists.txt
fmControllers/platform/dtu_smr/scripts/: keyboard.py  task4.txt
fmControllers/platform/dtu_smr/src/: smr_laser_node.cpp
fmControllers/platform/sdu_armadillo3/: CMakeLists.txt  package.xml
fmControllers/platform/sdu_armadillo3/launch/: bag_test.launch
fmControllers/platform/sdu_armadillo3/src/: roboteq.cpp
fmControllers/platform/sdu_frobit/: CMakeLists.txt  package.xml  setup.py
fmControllers/platform/sdu_frobit/src/: frobit_interface.hpp
fmControllers/platform/sdu_grassbots/: CMakeLists.txt  package.xml
fmControllers/platform/sdu_grassbots/launch/: test.launch  test_roboteq.launch
fmControllers/platform/sdu_grassbots/scripts/: test.py  trimmer.py
fmControllers/platform/sdu_grassbots/ui/: trimmer.ui
fmDependencies/occupancy_grid_utils/: CMakeLists.txt  package.xml
fmDependencies/occupancy_grid_utils/include/occupancy_grid_utils/: combine_grids.h
fmDependencies/occupancy_grid_utils/src/: combine_grids.cpp  file.cpp
fmDoc/: dox
fmExecutors/platform/action_primitives/: CMakeLists.txt  package.xml  setup.py
fmExecutors/platform/action_primitives/action/: make_turn.action
fmExecutors/platform/action_primitives/src/: drive_forward.py  make_turn.py  navigate_in_row_simple.py
fmExecutors/platform/line_executer/: .gitignore  CMakeLists.txt  package.xml
fmExecutors/platform/line_executer/action/: follow_path.action
fmExecutors/platform/line_executer/cfg/: rabbitPlanner.cfg
fmExecutors/platform/line_executer/src/: pathParser.cpp  pathParser.h  rabbitPlanner.cpp  rabbitPlanner.h  rabbitPlanner_node.cpp
fmExecutors/platform/position_action_server/: CMakeLists.txt  package.xml  setup.py
fmExecutors/platform/position_action_server/action/: position.action
fmExecutors/platform/position_action_server/scripts/: positionGoalActionServer.py
fmLib/computer_support/can_can4linux/: CMakeLists.txt  package.xml
fmLib/computer_support/can_can4linux/src/: can_can4linux.cpp
fmLib/computer_support/can_socketcan/: CMakeLists.txt  package.xml  readme.txt
fmLib/computer_support/can_socketcan/launch/: example.launch
fmLib/computer_support/can_socketcan/src/: SocketCan.cpp  SocketCan.h  can_socketcan_node.cpp
fmLib/hmi_support/wiimote_interface/: CMakeLists.txt  package.xml  setup.py
fmLib/hmi_support/wiimote_interface/scripts/: wii_interface_node.py
fmLib/msgs/: CMakeLists.txt  package.xml
fmLib/msgs/msg/: BoolStamped.msg  FloatArrayStamped.msg  IntArrayStamped.msg  IntStamped.msg  PropulsionModuleFeedback.msg  PropulsionModuleStatus.msg  RemoteControl.msg  RemoteControlFeedback.msg  RoutePt.msg  VectorStamped.msg  adc.msg  can.msg  claas_campilot.msg  claas_row_cam.msg  encoder.msg  engine_rpm.msg  gpgga.msg  gpgga_tranmerc.msg  gpgga_utm.msg  lidar_safety_zone.msg  magnetometer.msg  motor_status.msg  nmea.msg  propulsion_module_status.msg  row.msg  rtq.msg  rtq_command.msg  rtq_lamp_command.msg  steering_angle_cmd.msg  velocity.msg  waypoint_navigation_status.msg
fmLib/platform_support/dtu_smr/: package.xml
fmLib/platform_support/dtu_smr/scripts/: cmdfile.py  smr_example.py  task1.txt  task3.txt
fmLib/platform_support/dtu_smr/src/: connection.cpp  smr_control_node.cpp
fmProcessors/localization_mapping/encoder_utm_ekf/: CMakeLists.txt  package.xml
fmProcessors/localization_mapping/encoder_utm_ekf/src/: HeadingEstimator.cpp  HeadingEstimator.h  PositionEstimator.cpp  PositionEstimator.h  odometry_estimation.cpp
fmProcessors/localization_mapping/row_odom_kf/: CMakeLists.txt  package.xml
fmProcessors/localization_mapping/row_odom_kf/src/: row_odom_kf_node.cpp
fmProcessors/object_detection/lidar_row_extractor/: .gitignore  CMakeLists.txt  package.xml
fmSensors/global_sensing/gnss/gpgga_to_tranmerc/: CMakeLists.txt  package.xml
fmSensors/global_sensing/gnss/nmea_to_tranmerc/: CMakeLists.txt  package.xml  readme.txt
fmSensors/global_sensing/gnss/tranmerc_to_odom/: CMakeLists.txt  package.xml
fmSensors/global_sensing/imu/vectornav_vn100/: CMakeLists.txt  package.xml
(+1654 files in other folders)
